# SoSim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Simulator/Interface/Private/BuildSystem/: macro_helper.hpp  sosim_install.cmake
Simulator/Interface/Private/DFSPH/: data_pack.hpp
Simulator/Interface/Private/GUI/: gui_header_prefix.hpp  opengl_resource.hpp  render_programs.hpp  shader_manager.hpp  widget_tool.hpp  widgets.hpp
Simulator/Interface/Private/MSMSPH/: cuda_api.cuh  cuda_api_1.cuh  data_pack.hpp  data_pack_1.hpp
Simulator/Interface/Public/DFSPH/: dfsph_solver.hpp
Simulator/Interface/Public/Framework/: component.hpp  enum.hpp  framework_config.hpp  mat.hpp  object.hpp  scene.hpp  simulator.hpp  solver.hpp
Simulator/Interface/Public/GUI/: camera.hpp  gui.hpp  input_handling.hpp  light.hpp  render.hpp  shader.hpp
Simulator/Interface/Public/MSMSPH/: msmsph_solver.hpp
Simulator/Interface/Public/PhysicalSolvers/: solver_header_list.hpp  solver_ref.hpp
Simulator/Interface/Public/Test/: mmsph_solver_test.hpp  msmsph_solver_test.hpp  ugbns_test.hpp
Simulator/Source/: CMakeLists.txt
Simulator/Source/DFSPH/: CMakeLists.txt  dfsph_solver.cpp
Simulator/Source/Framework/: CMakeLists.txt  component.cpp  object.cpp  scene.cpp  simulator.cpp  solver.cpp
Simulator/Source/Framework/SubObjects/: particle_object.cpp
Simulator/Source/GUI/: CMakeLists.txt  camera.cpp  gui.cpp  render.cpp  render_programs.cpp  shader.cpp  shader_manager.cpp  widget_tool.cpp  widgets.cpp
Simulator/Source/GUI/Shaders/: draw_sphere.frag  draw_sphere.vert  test_1.frag  test_1.vert  test_shader.frag
Simulator/Source/MSMSPH/: CMakeLists.txt  cuda_impl.cu  cuda_impl_1.cu  msmsph_solver.cpp
Simulator/Source/MSMSPH/ObjectConfig/: README.md  overall_objs.json
Simulator/Source/PhysicalSolvers/: CMakeLists.txt
Simulator/Source/PhysicalSolvers/MixtureModelForNonNewtonFlow/: CMakeLists.txt  cuda_impl.cu  mmsph_solver.cpp  overall_objs.json
Simulator/Source/PhysicalSolvers/SampleSolver/: CMakeLists.txt  sample_solver.cpp
Simulator/Source/Shared/: CMakeLists.txt
Simulator/Source/Shared/Analyzer/: params_analysis_helper.cpp
Simulator/Source/Shared/CudaUtils/: cuda_tool.cu
Simulator/Source/Shared/ModelUtils/: model_builder.cpp  model_tool.cpp
Simulator/Source/Shared/NeighborSearchUGB/: cuda_impl.cu  neighbor_search_ugb.cpp
Simulator/Source/Shared/SPHKernel/: sph_kernel.cu
Simulator/Test/: CMakeLists.txt  test_main.cpp
Simulator/Test/UnitTest/: mmsph_test.hpp  ugbns_test.hpp
Simulator/Test/UnitTest/ImGUI-Test/: CMakeLists.txt  imgui_test.cpp
renderer/: CMakeLists.txt
renderer/include/: render_component.hpp  render_enum.hpp  so_render.hpp
renderer/src/: so_render.cpp
scenes/: CMakeLists.txt  scene_base.cpp  scene_ismct.cpp  scene_jl21ct.cpp  scene_mixct.cpp  scene_wcsph.cpp
scenes/BIBM/: CMakeLists.txt  emitter_test.cpp  inject.cpp  mix.cpp
scenes/BIBM2024/: CMakeLists.txt  emitter.cpp  inject.cpp  mix_dfsph.cpp  mix_ims.cpp  mix_imsct.cpp
scenes/CMPB/: CMakeLists.txt  emitter_test.cpp
scenes/SCA/: CMakeLists.txt  buckling_donut.cpp  buckling_particle.cpp  diamonds.cpp  mix.cpp  shear_blocks.cpp  stir.cpp  stir_compare.cpp
scenes/SCA2024/: CMakeLists.txt  scene_buckling.cpp  scene_diamonds.cpp  scene_diff.cpp  scene_diff_2.cpp  scene_shear.cpp  scene_stir.cpp
scenes/TVCG/: CMakeLists.txt  imm_v2_test.cpp
scenes/XYH/: CMakeLists.txt  dfsph.cpp
scenes/dev-test/: CMakeLists.txt  matrix_v2_test.cpp
scenes/examples/: CMakeLists.txt  example_create_object.cpp  example_dfsph.cpp  example_imm.cpp  example_imm_cocktail-separate.cpp  example_imm_ink_dif.cpp  example_imm_v2.cpp  example_imm_xyh.cpp  example_immct.cpp  example_pbf.cpp
simulator/include/core/: data_type.hpp  material.hpp
simulator/include/core/math/: matrix.hpp  matrix_v2.hpp
simulator/include/core/reflection/: reflection.hpp  register.hpp
simulator/include/framework/: object.hpp  object_manager.hpp  sim_material.hpp  solver.hpp  solver_manager.hpp
simulator/include/libs/SPHL/: kernels.cuh
simulator/src/: CMakeLists.txt
simulator/src/core/reflection/: reflection.cpp  register.cpp
simulator/src/framework/: object.cpp  object_manager.cpp  solver.cpp  solver_manager.cpp
simulator/src/framework/MetaFramework/: object.cpp  solver.cpp
simulator/src/libs/AnalysisL/: dump_util.cpp  statistic_util.cpp
simulator/src/libs/ModelL/: model_exporter.cpp  model_helper.cpp  model_loader.cpp
simulator/src/libs/NeighborSearchL/: unified_grid_ns.cpp  unified_grid_ns_kernel_api.cuh  unified_grid_ns_kernel_impl.cu
simulator/src/libs/ParticleEmitter/: particle_emitter.cpp
simulator/src/libs/SPHL/: kernels.cu
simulator/src/solvers/: CMakeLists.txt
simulator/src/solvers/DFSPH/: dfsph_cuda_api.cuh  dfsph_cuda_impl.cu  dfsph_cuda_invoke_api.cuh  dfsph_cuda_invoke_impl.cu  dfsph_macro.hpp  dfsph_solver.cpp
simulator/src/solvers/IMM/: imm_cuda_api.cuh  imm_cuda_impl.cu  imm_macro.hpp  imm_solver.cpp
simulator/src/solvers/IMM-CT/: immct_cuda_api.cuh  immct_cuda_impl.cu  immct_macro.hpp  immct_solver.cpp
simulator/src/solvers/IMM-v2/: imm_cuda_api_v2.cuh  imm_cuda_impl_v2.cu  imm_macro_v2.hpp  imm_solver_v2.cpp  imm_v2_cuda_api.cuh  imm_v2_cuda_impl.cu  imm_v2_macro.hpp  imm_v2_solver.cpp
simulator/src/solvers/IMS-ConformationTensor/: empty_src.cpp  macro.hpp
simulator/src/solvers/ISM-ConformationTensor/: ism_ct_cuda_api.cuh  ism_ct_cuda_impl.cu  ism_ct_macro.hpp  ism_ct_solver.cpp
simulator/src/solvers/JL21-ConformationTensor/: jl21_ct_cuda_api.cuh  jl21_ct_cuda_impl.cu  jl21_ct_solver.cpp  jl21_solver_cuda_api.cuh  jl21_solver_cuda_impl.cu  jl21_solver_host_invoke_api.cuh  jl21_solver_host_invoke_impl.cu
simulator/src/solvers/PBF/: pbf_cuda_api.cuh  pbf_cuda_impl.cu  pbf_macro.hpp  pbf_solver.cpp
simulator/src/solvers/VisPBF/: vis_pbf_cuda_api.cuh  vis_pbf_cuda_impl.cu  vis_pbf_macro.hpp  vis_pbf_solver.cpp
simulator/src/solvers/WCSPH/: macro.hpp  wcsph_cuda_api.cuh  wcsph_cuda_impl.cu  wcsph_cuda_invoke_api.cuh  wcsph_solver.cpp
simulator/test/: main.cpp
(+47 files in other folders)
